syntax = "proto3";

package jobs;

// ===================================================
// SERVICE DEFINITION
// ===================================================
service JobsService {  
  // --- Creation Flows ---
  rpc CreateJobPost (CreateJobPostRequest) returns (BaseJobPostCreateResponse);
  rpc CreateAdminJobPost (CreateJobPostRequest) returns (BaseJobPostCreateResponse);
  
  // --- Discovery Flows ---
  rpc GetJobPostById (GetJobPostByIdRequest) returns (BaseJobPostResponse);
  rpc GetJobsByCategory (GetJobsByCategoryRequest) returns (ListJobPostsResponse);
  rpc ValidateJobPostIds(ValidateJobPostIdsRequest) returns (BaseValidateJobPostIdsResponse);
  
  // --- Update Flows ---
  rpc UpdateJobPost (UpdateJobPostRequest) returns (BaseJobPostResponse);
  rpc UpdateAdminJobPost (UpdateJobPostRequest) returns (BaseJobPostResponse);
  
  // --- Closure Flows ---
  rpc CloseJobPost (CloseJobPostRequest) returns (BaseCloseJobPostResponse);
  rpc CloseAdminJobPost (CloseJobPostRequest) returns (BaseCloseJobPostResponse);
  
  // --- Application Flows ---
  rpc ApplyToJobPost (CreateJobApplicationRequest) returns (BaseJobApplicationResponse);
  rpc GetOwnApplications (GetOwnApplicationsRequest) returns (ListJobApplicationsResponse);
  rpc GetAdminApplications (GetAdminApplicationsRequest) returns (ListJobApplicationsResponse);
  rpc GetApplicationById (GetApplicationByIdRequest) returns (BaseJobApplicationResponse);

  // --- Ownership & Management ---
  rpc GetOwnJobs (GetOwnJobsRequest) returns (ListJobPostsResponse);
  rpc GetAdminJobs (GetAdminJobsRequest) returns (ListJobPostsResponse);
}

// ===================================================
// SHARED PAYLOADS
// ===================================================
message ErrorPayload {
  string code = 1;
  string message = 2;
  string details = 3;
}

message UserBasic {
  string id = 1;
  string fullName = 2;
  string email = 3;
}

message AccountBasic {
  string id = 1;
  string name = 2;
}

message CategoryBasic {
  string id = 1;
  string name = 2;
}

// ===================================================
// JOB APPLICATION ENTITIES
// ===================================================
message Attachment {
  string id = 1;
  string type = 2;
  string fileUrl = 3;
  string fileName = 4;
  string contentText = 5;
  bool isPrimary = 6;
}

message StatusHistory {
  string id = 1;
  string oldStatus = 2;
  string newStatus = 3;
  string changedBy = 4;
  string reason = 5;
  string createdAt = 6;
}

message JobApplication {
  string id = 1;
  optional string externalId = 2;
  string jobPostId = 3;
  string applicantId = 4;
  string employerId = 5;
  string status = 6;
  double expectedPay = 7;
  string availabilityDate = 8;
  string availabilityNotes = 9;
  string referrerName = 10;
  string referrerPhone = 11;
  string referrerEmail = 12; 
  string referrerRelationship = 13;
  string createdAt = 14;
  string updatedAt = 15;
  optional string reviewedAt = 16;
  repeated Attachment attachments = 17;
  repeated StatusHistory statusHistory = 18;
  optional string lastStatusChangeReason = 19; // For lightweight UI support
}

// ===================================================
// JOB POST ENTITY
// ===================================================
message JobPost {
  string id = 1;
  string title = 2;
  string description = 3;
  CategoryBasic category = 4;
  CategoryBasic subCategory = 5;
  UserBasic creator = 6;
  AccountBasic account = 7; 
  string jobType = 8;
  string locationCity = 9;
  string locationNeighborhood = 10;
  bool isRemote = 11;
  bool requiresDocuments = 12;
  bool requiresEquipment = 13;
  double payAmount = 14;
  string payRate = 15;
  bool isNegotiable = 16;
  repeated string skills = 17;
  string experienceLevel = 18;
  string employmentType = 19;
  repeated string documentsNeeded = 20;
  repeated string equipmentRequired = 21;
  string additionalNotes = 22;
  string status = 23;
  int32 applicationsCount = 24;
  string createdAt = 25;
  string updatedAt = 26;
}

// ===================================================
// REQUEST MESSAGES
// ===================================================

message GetOwnApplicationsRequest {
  string applicantId = 1;
  optional string status = 2;
}

message GetAdminApplicationsRequest {
  optional string applicantId = 1;
  optional string employerId = 2;
  optional string status = 3;
}

message GetApplicationByIdRequest {
  string id = 1;
  string requesterId = 2; // Required for security/ownership check
  optional string requesterRole = 3; // Optional for more nuanced access control (e.g., admin vs. employer) 
}

message CreateJobPostRequest {
  string title = 1;
  string description = 2;
  string categoryId = 3;
  string subCategoryId = 4;
  string jobType = 5;
  string locationCity = 6;
  string locationNeighborhood = 7;
  bool isRemote = 8;
  double payAmount = 9;
  string payRate = 10;
  bool isNegotiable = 11;
  bool requiresDocuments = 12;
  bool requiresEquipment = 13;
  repeated string skills = 14;
  string experienceLevel = 15;
  string employmentType = 16;
  repeated string documentsNeeded = 17;
  repeated string equipmentRequired = 18;
  string additionalNotes = 19;
  string status = 20;

  // Identity Pillars
  string accountId = 21;
  string creatorId = 22;
  
  // Optional for Denormalization (Shared Nav support)
  optional string creatorName = 23;
  optional string accountName = 24;
}

message UpdateJobPostRequest {
  string id = 1;
  string creatorId = 2;

  optional string accountId = 3;
  optional string title = 4;
  optional string description = 5;
  optional string status = 6;
  optional double payAmount = 7;
  optional bool isNegotiable = 8;
  optional string locationCity = 9;
  optional string locationNeighborhood = 10;
  optional string creatorName = 11;
  optional string accountName = 12;
}

message CloseJobPostRequest {
  string id = 1;
  string creatorId = 2;
  optional string accountId = 3;
  optional string reason = 4;
}

message CreateJobApplicationRequest {
  string jobPostId = 1;
  string applicantId = 2;
  bool hasRequiredEquipment = 3; 
  double expectedPay = 4;
  string availabilityDate = 5;
  string availabilityNotes = 6;
  string referrerName = 7;
  string referrerPhone = 8;
  string referrerEmail = 9;
  string referrerRelationship = 10;
  repeated Attachment attachments = 11;
}

message GetJobPostByIdRequest { string id = 1; }
message GetJobsByCategoryRequest { string categoryId = 1; }
message ValidateJobPostIdsRequest { repeated string ids = 1; }

// ===================================================
// RESPONSE MESSAGES
// ===================================================

message ListJobApplicationsResponse {
  bool success = 1;
  string code = 2;
  string message = 3;
  repeated JobApplication data = 4;
  ErrorPayload error = 5;
}

message JobPostCreateData {
  string id = 1;
  string status = 2;
  string createdAt = 3;
}

message BaseJobPostCreateResponse {
  bool success = 1;
  string code = 2;
  string message = 3;
  JobPostCreateData data = 4;
  ErrorPayload error = 5;
}

message BaseJobPostResponse {
  bool success = 1;
  string code = 2;
  string message = 3;
  JobPost data = 4; 
  ErrorPayload error = 5;
}

message ListJobPostsResponse {
  bool success = 1;
  string code = 2;
  string message = 3;
  repeated JobPost data = 4;
  ErrorPayload error = 5;
}

message CloseJobPostData {
  string id = 1;
  string status = 2;
  bool isClosed = 3;
  string closedAt = 4;
}

message BaseCloseJobPostResponse {
  bool success = 1;
  string code = 2;
  string message = 3;
  CloseJobPostData data = 4;
  ErrorPayload error = 5;
}

message BaseJobApplicationResponse {
  bool success = 1;
  string code = 2;
  string message = 3;
  JobApplication data = 4;
  ErrorPayload error = 5;
}

message ValidateJobIdsData {
   repeated string validIds = 1;
   repeated string invalidIds = 2;
}

message BaseValidateJobPostIdsResponse {
  bool success = 1;
  string code = 2;
  string message = 3;
  ValidateJobIdsData data = 4;
  ErrorPayload error = 5;
}

message GetOwnJobsRequest {
  string creatorId = 1;
  optional string status = 2;
}

message GetAdminJobsRequest {
  optional string creatorId = 1;
  optional string accountId = 2;
  optional string status = 3;
}